fixed dashboard and seeing stuff without being logged in

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,7 @@
         <a href="/profile">Dashboard</a> |
         <button class="no-button" id="logout">logout</button>
         {{else}}
+        <a href="/profile">Dashboard</a> |
         <a href="/login">login</a>
         {{/if}}
       </nav>
